; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/extr_hdmi.c_hdmi_vendor_any_infoframe_check.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/extr_hdmi.c_hdmi_vendor_any_infoframe_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.hdmi_vendor_any_infoframe = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@HDMI_IEEE_OUI = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%union.hdmi_vendor_any_infoframe*)* @hdmi_vendor_any_infoframe_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdmi_vendor_any_infoframe_check(%union.hdmi_vendor_any_infoframe* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %union.hdmi_vendor_any_infoframe*, align 8
  %4 = alloca i32, align 4
  store %union.hdmi_vendor_any_infoframe* %0, %union.hdmi_vendor_any_infoframe** %3, align 8
  %5 = load %union.hdmi_vendor_any_infoframe*, %union.hdmi_vendor_any_infoframe** %3, align 8
  %6 = call i32 @hdmi_vendor_any_infoframe_check_only(%union.hdmi_vendor_any_infoframe* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %25

11:                                               ; preds = %1
  %12 = load %union.hdmi_vendor_any_infoframe*, %union.hdmi_vendor_any_infoframe** %3, align 8
  %13 = bitcast %union.hdmi_vendor_any_infoframe* %12 to %struct.TYPE_2__*
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @HDMI_IEEE_OUI, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %11
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %2, align 4
  br label %25

21:                                               ; preds = %11
  %22 = load %union.hdmi_vendor_any_infoframe*, %union.hdmi_vendor_any_infoframe** %3, align 8
  %23 = bitcast %union.hdmi_vendor_any_infoframe* %22 to i32*
  %24 = call i32 @hdmi_vendor_infoframe_check(i32* %23)
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %21, %18, %9
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @hdmi_vendor_any_infoframe_check_only(%union.hdmi_vendor_any_infoframe*) #1

declare dso_local i32 @hdmi_vendor_infoframe_check(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
